--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
-uvicorn
-numpy
-joblib
-scikit-learn
+scikit-learn==1.7.1
+numpy==2.4.2
+scipy==1.17.0
+joblib==1.5.3
+fastapi==0.129.0
+uvicorn==0.40.0
+pydantic==2.12.5
